project(IHMCMicroStrainDrivers)
cmake_minimum_required(VERSION 2.6)

#IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
#  SET(CMAKE_INSTALL_PREFIX
#    ${CMAKE_SOURCE_DIR} CACHE PATH "ValkyrieHardwareDrivers install prefix" FORCE
#    )
#ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

set(CMAKE_BUILD_TYPE RelWithDebInfo)

add_subdirectory(csrc)

if( INIT_SYSTEM )
    if( ${INIT_SYSTEM} STREQUAL "systemd")
        SET(INIT_SYSTEMD True CACHE BOOL "Use the systemd init system" FORCE)
        SET(INIT_UPSTART False CACHE BOOL "Use the upstart init system" FORCE)
    elseif( ${INIT_SYSTEM} STREQUAL "upstart")
        SET(INIT_SYSTEMD False CACHE BOOL "Use the systemd init system" FORCE)
        SET(INIT_UPSTART True CACHE BOOL "Use the upstart init system" FORCE)
    elseif( ${INIT_SYSTEM} STREQUAL "disable" )
        message(STATUS "Disabling init system install")
        SET(INIT_SYSTEMD False CACHE BOOL "Use the systemd init system" FORCE)
        SET(INIT_UPSTART False CACHE BOOL "Use the upstart init system" FORCE)
    else()
        message(WARNING "Unknown init system: INIT_SYSTEM=${INIT_SYSTEM}")
        SET(INIT_SYSTEMD False CACHE BOOL "Use the systemd init system")
        SET(INIT_UPSTART False CACHE BOOL "Use the upstart init system")
    endif()
endif()

if( INIT_SYSTEMD )
    message(STATUS "Init system set to systemd")
    add_subdirectory(systemd)
elseif( INIT_UPSTART )
    message(STATUS "Init system set to upstart")
    add_subdirectory(upstart)
else()
    message(STATUS "INIT_SYSTEM not set")
endif()
